Apikey (#17)
* apikeys

* Splits the whitelist of apikeys on load

* Adds a toggle setting to skip apikey checking

---------
