# middlewares/validateApikeys.js
@@ -1,7 +1,7 @@
 const {response} = require('express');
 const jwt = require('jsonwebtoken');
 const {HTTP_CLIENT_ERROR_4XX, HTTP_SERVER_ERROR_5XX} = require('../helpers/httpCodes')
-const {getApikeys,getSelfApikey} = require('../helpers/apikeys');
+const {getApikeys,getSelfApikey, isApiKeyCheckingEnabled} = require('../helpers/apikeys');
 const {MSG_NO_APIKEY, 
     MSG_INVALID_APIKEY,
     MSG_APIKEY_NO_MATCH} = require('../messages/apikey');
@@ -14,34 +14,33 @@ const {
  * la propia.
  */
 const validateApikeys = (req, res = response, next) => {
-    const gatewayApikey = req.header('x-apikey');
-    const whiteListApiKeys = getApikeys();
-    logDebug(`On validate gateway apikey, gateway apikey: ${whiteListApiKeys}`);
-    if (whiteListApiKeys) {
-        if (!gatewayApikey) {
+
+    if (isApiKeyCheckingEnabled() ) {
+        const requestApikey = req.header('x-apikey');
+        logDebug(`On validate apikey: ${requestApikey}`);
+        if (!requestApikey) {
             const dataToResponse = {
                 ok: false,
                 msg: MSG_NO_APIKEY
             };
-            logDebug(`On validate gateway apikey null`);
-            logInfo(`On validate gateway apikey response: ${HTTP_CLIENT_ERROR_4XX.BAD_REQUEST}; ${JSON.stringify(dataToResponse)}`)
+            logDebug(`On validate apikey null`);
+            logInfo(`On validate apikey response: ${HTTP_CLIENT_ERROR_4XX.BAD_REQUEST}; ${JSON.stringify(dataToResponse)}`)
             return res.status(HTTP_CLIENT_ERROR_4XX.BAD_REQUEST).json(dataToResponse);
         } 
         try {
-            doValidateApikeys(req);
+            doValidateApikey(requestApikey);
         } catch (error) {
             const dataToResponse = {
                 ok: false,
                 msg: MSG_INVALID_APIKEY
             };
             const statusToResponse = HTTP_SERVER_ERROR_5XX.SERVICE_NOT_AVAILABLE;
-            logDebug(`On validate gateway apikey error: ${error}`);
-            logInfo(`On validate gateway apikey response: ${statusToResponse}; ${JSON.stringify(dataToResponse)}`)
+            logDebug(`On validate request apikey error: ${error}`);
+            logInfo(`On validate request apikey response: ${statusToResponse}; ${JSON.stringify(dataToResponse)}`)
             return res.status(statusToResponse).json(dataToResponse)
-        }
-    } else {
-        logDebug('On validadte apikey gateway: there is no whitelist');
+        }; 
     }
+
     next();
 }
 
@@ -50,34 +49,24 @@ const validateApikeys = (req, res = response, next) => {
  * Válida el x-apikey del request y compara con las apikeys locales validando
  * la propia.
  */
-const doValidateApikeys = (req) =>  {
-    const gatewayApikey = req.header('x-apikey');
-    logDebug(`On validate apikey gateway : ${gatewayApikey}`);
-    const gatewayApikeyData = jwt.decode(gatewayApikey);
-    logDebug(`On validate apikey gateway data: ${JSON.stringify(gatewayApikeyData)}`);
+const doValidateApikey = (apikeyToValidate) =>  {
+    logDebug(`On validate apikey: ${apikeyToValidate}`);
+    // verificar integridad apikeyToValidate
+    const apikeyToValidateData = jwt.decode(apikeyToValidate);
+    logDebug(`On validate apikey gateway data: ${JSON.stringify(apikeyToValidateData)}`);
     const whiteListApiKeys = getApikeys();
-    if (Array.isArray(whiteListApiKeys) && whiteListApiKeys.some( x => x == gatewayApikey)) {
-        const selfApikey = getSelfApikey();
-        if (selfApikey) {
-            logDebug(`On validate apikey self: ${selfApikey}`);
-            const selfApikeyData = jwt.decode(selfApikey);
-            logDebug(`On validate apikey self data: ${JSON.stringify(selfApikeyData)}`);
-        } else {
-            logDebug('On validadte apikeys: there is no whitelist');
-        }        
+    console.log("¿Array? ",Array.isArray(whiteListApiKeys));
+    if (Array.isArray(whiteListApiKeys) && whiteListApiKeys.some( x => x == apikeyToValidate)) {
+        logDebug(`On validate apikey: apikey validated`);     
     } else {
-        if (whiteListApiKeys) {
-            throw new Error(MSG_APIKEY_NO_MATCH);
-        } else {
-            logDebug('On validadte apikey gateway: there is no whitelist');
-        }
+        logDebug(`On validate apikey: throw error`);     
+        throw new Error(MSG_APIKEY_NO_MATCH)
     }
 }
 
-const validateApikeysOnResponse = (req) => {
-    const gatewayApikey = req.header('x-apikey');
-    if (gatewayApikey) {
-        doValidateApikeys(req);
+const validateApikeysOnResponse = () => {
+    if (isApiKeyCheckingEnabled()) {
+        doValidateApikey(getSelfApikey());
     }
 }
 
